<resources>
    <string name="app_name">MOSIS_Project</string>
    <string name="action_logout">Logout</string>
    <!-- Strings used for fragments for navigation -->
    <string name="login_fragment_label">Login</string>
    <string name="map_fragment_label">Map</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register_fragment_label">Register</string>
    <string name="phone_register">Phone</string>
    <string name="image_register">User profile image</string>
    <string name="email_register">Email</string>
    <string name="edit_spot_fragment_label">Add/Edit</string>
    <string name="edit_spot_name">Name</string>
    <string name="edit_spot_description">Descritpion</string>
    <string name="edit_spot_category">Category</string>
    <string name="image_edit_spot">Image of the spot</string>
    <string name="edit_spot_long">Longitude</string>
    <string name="edit_spot_latitude">Latitude</string>
    <string name="edit_spot_apply">Apply</string>
    <string name="edit_spot_back">Back</string>
    <string name="action_add_spot">Add spot</string>
    <string name="btn_set_current_edit_spot">Set current</string>
    <string name="btnClose_show_spot">Close</string>
    <string name="spot_info">Spot info</string>
    <string name="action_map">Show map</string>
    <string name="action_list">Show list</string>
    <string name="list_label">List</string>
    <string name="radius_filter">Radius</string>
    <string name="action_filter">Filters</string>
    <string name="filter_label">Filter</string>
    <string name="leaderboard_label">Leaderboard</string>
    <string name="action_leaderboard">Leaderboard</string>
    <string-array name="spot_categories">
        <item>Kafić</item>
        <item>Kafana</item>
        <item>Restoran</item>
        <item>Noćni klub</item>
        <item>Klub sa igrama</item>
        <item>Park</item>
        <item>Drugo</item>
    </string-array>
    <string-array name="spot_categories_extended">
        <item>Sve</item>
        <item>Kafić</item>
        <item>Kafana</item>
        <item>Restoran</item>
        <item>Noćni klub</item>
        <item>Klub sa igrama</item>
        <item>Park</item>
        <item>Drugo</item>
    </string-array>
</resources>