<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="elfak.mosis.project.MainActivity">

    <item
        android:id="@+id/action_map"
        android:orderInCategory="100"
        android:title="@string/action_map"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_list"
        android:orderInCategory="100"
        android:title="@string/action_list"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_filter"
        android:orderInCategory="100"
        android:title="@string/action_filter"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_add_spot"
        android:orderInCategory="100"
        android:title="@string/action_add_spot"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_leaderboard"
        android:orderInCategory="100"
        android:title="@string/action_leaderboard"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/action_logout"
        app:showAsAction="never" />

</menu>