<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditSpotFragment"
    android:orientation="vertical"
    android:layout_marginBottom="50dp"
    >

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etName_edit_spot"
            android:hint="@string/edit_spot_name"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:layout_margin="5dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etDesc_edit_spot"
            android:hint="@string/edit_spot_description"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">
        <AutoCompleteTextView
            android:id="@+id/edmCategory_edit_spot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:hint="@string/edit_spot_category"
        />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:layout_gravity="center"
        android:id="@+id/user_image_register"
        android:src="@drawable/baseline_add_a_photo_white_48"
        android:contentDescription="@string/image_edit_spot"
        android:layout_margin="5dp">
    </ImageView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dp"
        android:baselineAligned="false"
        >
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:layout_marginEnd="5dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etLat_edit_spot"
            android:hint="@string/edit_spot_latitude"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:layout_marginStart="5dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etLong_edit_spot"
            android:hint="@string/edit_spot_long"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            />
    </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnSetCurr_edit_spot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="5dp"
            android:text="@string/btn_set_current_edit_spot">
        </Button>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="5dp">
        <Button
            android:id="@+id/btnBack_edit_spot"
            android:text="@string/edit_spot_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            >
        </Button>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
        </LinearLayout>
        <Button
            android:id="@+id/btnAdd_edit_spot"
            android:text="@string/edit_spot_apply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end">
        </Button>
    </LinearLayout>

</LinearLayout>