<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp"
    tools:context=".RegisterFragment">

    <TextView
        android:text="@string/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:textSize="25sp"
        />

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:id="@+id/user_image_register"
        android:src="@drawable/baseline_add_a_photo_white_48"
        android:contentDescription="@string/image_register"
        android:layout_marginBottom="5dp">
    </ImageView>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_register"
            android:hint="@string/email_register"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_register"
            android:hint="@string/password"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:maxWidth="488dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username_register"
            android:hint="@string/username"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phone_register"
            android:hint="@string/phone_register"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_register"
        android:text="@string/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


</LinearLayout>