<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/LoginFragment">

    <fragment
        android:id="@+id/LoginFragment"
        android:name="elfak.mosis.project.LoginFragment"
        android:label="@string/login_fragment_label"
        tools:layout="@layout/fragment_login">

        <action
            android:id="@+id/action_LoginFragment_to_MapFragment"
            app:destination="@id/MapFragment" />
        <action
            android:id="@+id/action_LoginFragment_to_RegisterFragment"
            app:destination="@id/RegisterFragment" />
    </fragment>
    <fragment
        android:id="@+id/MapFragment"
        android:name="elfak.mosis.project.MapFragment"
        android:label="@string/map_fragment_label"
        tools:layout="@layout/fragment_map">

        <action
            android:id="@+id/action_MapFragment_to_LoginFragment"
            app:destination="@id/LoginFragment" />
        <action
            android:id="@+id/action_MapFragment_to_EditSpotFragment"
            app:destination="@id/EditSpotFragment" />
        <action
            android:id="@+id/action_MapFragment_to_ShowSpotFragment"
            app:destination="@id/ShowSpotFragment" />
        <action
            android:id="@+id/action_MapFragment_to_ListFragment"
            app:destination="@id/ListFragment" />
    </fragment>
    <fragment
        android:id="@+id/RegisterFragment"
        android:name="elfak.mosis.project.RegisterFragment"
        android:label="@string/register_fragment_label"
        tools:layout="@layout/fragment_register">

        <action
            android:id="@+id/action_RegisterFragment_to_LoginFragment"
            app:destination="@id/LoginFragment" />
    </fragment>
    <fragment
        android:id="@+id/EditSpotFragment"
        android:name="elfak.mosis.project.EditSpotFragment"
        android:label="@string/edit_spot_fragment_label"
        tools:layout="@layout/fragment_edit_spot">

        <action
            android:id="@+id/action_EditSpotFragment_to_LoginFragment"
            app:destination="@id/LoginFragment" />
        <action
            android:id="@+id/action_EditSpotFragment_to_MapFragment"
            app:destination="@id/MapFragment" />
    </fragment>
    <fragment
        android:id="@+id/ShowSpotFragment"
        android:name="elfak.mosis.project.ShowSpotFragment"
        android:label="@string/spot_info"
        tools:layout="@layout/fragment_show_spot">

        <action
            android:id="@+id/action_ShowSpotFragment_to_LoginFragment"
            app:destination="@id/LoginFragment" />
        <action
            android:id="@+id/action_ShowSpotFragment_to_MapFragment"
            app:destination="@id/MapFragment" />
        <action
            android:id="@+id/action_ShowSpotFragment_to_ListFragment"
            app:destination="@id/ListFragment" />


    </fragment>
    <fragment
        android:id="@+id/ListFragment"
        android:name="elfak.mosis.project.ListFragment"
        android:label="@string/list_label"
        tools:layout="@layout/fragment_list">

        <action
            android:id="@+id/action_ListFragment_to_LoginFragment"
            app:destination="@id/LoginFragment" />
        <action
            android:id="@+id/action_ListFragment_to_MapFragment"
            app:destination="@id/MapFragment" />
        <action
            android:id="@+id/action_ListFragment_to_ShowSpotFragment"
            app:destination="@id/ShowSpotFragment" />



    </fragment>

    <fragment
        android:id="@+id/FilterFragment"
        android:name="elfak.mosis.project.FilterFragment"
        android:label="@string/filter_label"
        tools:layout="@layout/fragment_filter">

        <action
            android:id="@+id/action_FilterFragment_to_LoginFragment"
            app:destination="@id/LoginFragment" />
        <action
            android:id="@+id/action_FilterFragment_to_MapFragment"
            app:destination="@id/MapFragment" />



    </fragment>

    <fragment
        android:id="@+id/LeaderboardFragment"
        android:name="elfak.mosis.project.LeaderboardFragment"
        android:label="@string/leaderboard_label"
        tools:layout="@layout/fragment_leaderboard">

        <action
            android:id="@+id/action_LeaderboardFragment_to_LoginFragment"
            app:destination="@id/LoginFragment" />
        <action
            android:id="@+id/action_LeaderboardFragment_to_MapFragment"
            app:destination="@id/MapFragment" />



    </fragment>
</navigation>