<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FilterFragment">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="5dp">
        <AutoCompleteTextView
            android:id="@+id/edmCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:hint="@string/edit_spot_category"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/radius_filter"
        android:layout_marginTop="64dp"
        android:layout_marginHorizontal="15dp"
        android:textSize="20sp">
    </com.google.android.material.textview.MaterialTextView>
    <com.google.android.material.slider.Slider
        android:id="@+id/sliderRadius"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="32dp"
        android:valueFrom="1"
        android:valueTo="10"
        android:stepSize="1">

    </com.google.android.material.slider.Slider>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="5dp">
        <Button
            android:id="@+id/btnBack"
            android:text="@string/edit_spot_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            >
        </Button>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
        </LinearLayout>
        <Button
            android:id="@+id/btnApply"
            android:text="@string/edit_spot_apply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end">
        </Button>
    </LinearLayout>

</LinearLayout>